--- a/css/estilo.css
+++ b/css/estilo.css
@@ -958,8 +958,17 @@ input[type=reset]{
 }
 
 #banner-eventos{
-    width: 30%;
+    width: 60%;
     height: auto;
+    opacity: 0.6;
+}
+
+.fundo-banner {
+    background-image: url(../img/eventos_baner_atletica.png);
+    background-size: 32%;
+    width: 100%;
+    height: 450px;
+    opacity: 0.8;
 }
 
 #caixa-mural-eventos{
@@ -1015,10 +1024,13 @@ h1 {
 #main-eventos .breadcrumb {
     text-align: center;
     text-transform: uppercase;
+    padding-top: 0.5em;
 }
 
 #main-eventos .titulo {
-    top: 52%;
+    top: 58.2%;
+    color: rgba(99, 1, 1, 1);
+    background-color: rgba(170, 129, 129, 0.897);
 }
 
 
