ajustes finais: responsividade

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -962,6 +962,8 @@ label, legend{
 fieldset{
     padding: 5px;
     border: none;
+    margin-top: 1em;
+
 }
 
 textarea{
@@ -1000,7 +1002,43 @@ input[type=reset]{
     margin: 0 0 0 25%;
 }
 
-@media screen and (max-width: 630px){}
+@media screen and (max-width: 630px){
+
+    #conteudo .titulo {
+        padding-left: 20%;
+    }
+
+    input{
+        width: 90%;
+    }
+    
+    #assunto{
+        width: 94%;
+    }
+    #data{
+        width: 90%;
+    }
+    
+    textarea{
+        width: 90%;
+    }
+    
+    input[type=submit]{
+        width: 25%;
+        margin-left: 20%;
+    }
+    input[type=reset]{
+        width: 25%;
+        
+    }
+    
+    #contato{
+        margin-left: 0;
+        padding-left: 0;
+        border-left: 0;
+
+    }
+}
 
 
 
