--- a/css/estilo.css
+++ b/css/estilo.css
@@ -296,6 +296,13 @@ p {
     text-align: center;
 }
 
+.texto-box{
+    height: 100px;
+    line-height: 1em;
+    font-size:1em;
+    text-align: justify;
+}
+
 #caixa-mural {
   margin-top: 2%;
   margin-left: 12%;
@@ -312,6 +319,7 @@ p {
     width: 20%;
     display: inline-block;
     margin: 1%;
+    vertical-align: top;
 }
    
 #mural li {
@@ -319,14 +327,16 @@ p {
     list-style: none;
     display: block;
     text-align: justify;
+    
 }
 
 
 .box-imagem {
     width: 100%; 
-    height: 250px;
+    height: 200px;
     border-radius: 22px;
     border: solid 1px rgba(99, 1, 1, 1);
+
 }
 
 
@@ -1014,8 +1024,6 @@ input[type=reset]{
 
     }
 }
-
-
 
 
 /*estilo da loja virtual*/
