--- a/css/estilo copy.css
+++ b/css/estilo copy.css
@@ -4,7 +4,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
     color: white;
-    background-color: black;
 }
 
 section{
@@ -76,7 +75,7 @@ nav {
     text-decoration: none;
     font-weight: bold;
     font-size: 1.2em;
-    color: yellow /* rgba(99, 1, 1, 1)*/;
+    color: rgba(232, 182, 2, 0.836) /* rgba(99, 1, 1, 1)*/;
 }
 
 
@@ -174,14 +173,14 @@ p {
 .galeria_trofeus{
     text-align: left;
     font-size: 1.4em;
-    color: white;
+    color: rgba(99, 1, 1, 1);
     padding-left: 1%;
     padding-top: 2%;
 
 }
 .galeria_link{
     text-decoration: none;
-    color: white;
+    color: rgb(133, 130, 130);
 
 }
 .galeria_texto{
@@ -190,7 +189,7 @@ p {
     margin-left: 25%;
     margin-top: -12%;
     text-align:left;
-    border: 2px dashed yellow;
+    border: 2px dashed rgba(99, 1, 1, 1);
 }
 .galeria_data_texto{
     width: 50%;
@@ -198,7 +197,7 @@ p {
     margin-top: -11%;
     height: auto;
     text-align:left;
-    border: 2px dashed yellow;
+    border: 2px dashed rgba(99, 1, 1, 1);
 }
 #img_trofeus{
     width: 180px;
@@ -427,7 +426,7 @@ footer p {
 .breadcrumb li {
     display: inline;    
     font-size: 1em;
-    color: white;
+    color:rgb(78, 0, 0);
 }
 
 #main-modalidades .breadcrumb {
@@ -436,7 +435,7 @@ footer p {
 }
 
 .breadcrumb li a {
-    color: yellow;
+    color: black;
     text-decoration: none;
 }
 
@@ -1203,10 +1202,6 @@ h1 {
 
 #main-acessibilidade p {
     text-align: left;
-}
-
-#vlibraslink {
-    color: yellow;
 }
 
 
