--- a/css/contraste.css
+++ b/css/contraste.css
@@ -646,7 +646,7 @@ label [for="bt_menu"]{
         padding-right: 30%;   
     }
     header{
-        background-color: rgba(99, 1, 1, 1);
+        background-color: black;
     }
     #menu-topo{
         display: none;
